[package]
name = "hecs-raylib-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7"
hecs = "0.7.7"
rand = "0.8.4"
log = "0.4.8"
env_logger = "0.9.1"
pretty_env_logger = "0.4"
once_cell = "1.15.0"
# simple-log = "1.6.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# strum = "0.23"
# strum_macros = "0.23"
 

